@@ -79,6 +79,9 @@ mail.admin = dspace-help@myu.edu
 # Recipient for server errors and alerts
 # alert.recipient = email-address-here
 
+# Recipient for new user registration emails
+# registration.notify.new = email-address-here
+
 
 ##### File Storage ######
 
