@@ -1,0 +1,15 @@
+# Registration notification email
+#
+# Parameters: {0}	Name:
+#			  {1}	Email:
+#			  {2}	Registration Date:
+#
+# See org.dspace.core.Email for information on the format of this file.
+#
+Subject: DSpace: Registration Notification
+
+A new user has registered on the system:
+
+Name:               	{0}
+Email:              	{1}
+Date:                   {2}
